[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextstore"
version = "1.0.1"
description = "Token-aware context memory package supporting multiple storage backends for LLM integrations and general context storage."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "aiosqlite>=0.19.0",
    "numpy>=1.20.0",
]
authors = [
    {name = "Adarsh R K", email = "adarshrk111@gmail.com"}
]
keywords = ["conversation", "history", "memory", "persistence", "chat", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/rkongit/contextstore"
Documentation = "https://github.com/rkongit/contextstore#readme"
Repository = "https://github.com/rkongit/contextstore"

[tool.setuptools]
packages = ["contextstore"]

[tool.setuptools.package-data]
contextstore = ["py.typed"]

